# veyra

./: .env.example  .gitignore  AGENTS.md  README.md  app.md  emailplan.md  eslint-report.txt  eslint.config.js  foldered_memory_file_graph_spec.md  index.html  opencode.json  package-lock.json  package.json  tsconfig.app.json  tui.json  vite.config.ts  vitest.config.ts  web-search-implementation-spec.md  websearch.md
docs/: ALL.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_commands.rs  character_commands.rs  character_db.rs  character_group_commands.rs  character_group_db.rs  character_io_commands.rs  code_execution_commands.rs  connectivity_commands.rs  constants.rs  db_utils.rs  document_commands.rs  document_db.rs  document_extraction.rs  email_commands.rs  email_db.rs  lib.rs  lm_studio_setup.rs  memory_commands.rs  memory_db.rs  path_utils.rs  project_commands.rs  project_db.rs  research_commands.rs  research_db.rs  research_html_parser.rs  research_source_fetcher.rs  searxng_setup.rs  web_fetch_cache.rs  web_fetch_commands.rs  web_fetch_documents.rs  web_fetch_html.rs  web_fetch_qwen.rs  web_fetch_types.rs  web_fetch_utils.rs  web_fetch_wayback.rs  web_fetch_youtube.rs  web_search_commands.rs
src-tauri/src/agents/: commands.rs  mod.rs  pi_runner.rs  process.rs  sessions.rs
src-tauri/src/characters/: commands.rs  db.rs  group_commands.rs  group_db.rs  io_commands.rs  mod.rs
src-tauri/src/code_execution/: commands.rs  mod.rs  process_utils.rs  python_resolver.rs  security_scanner.rs
src-tauri/src/documents/: commands.rs  db.rs
src-tauri/src/email/: commands.rs  db.rs  html.rs  mod.rs  thread_parser.rs
src-tauri/src/email/db/: accounts.rs  ai_drafts.rs  ai_jobs.rs  attachments.rs  gmail.rs  helpers.rs  mod.rs  smart_views.rs  tags.rs  tests.rs  threads.rs  types.rs
src-tauri/src/email/fixtures/: cjk_attribution.json  custom_labels.json  forwarded_message.json  gmail_quoted_reply.json  multipart_html_text.json  nested_blockquotes.json  outlook_reply.json  plain_text_gt_quotes.json  simple_text.json  system_labels.json  with_attachment.json
src-tauri/src/extensions/: commands.rs
src-tauri/src/file_extraction/: commands.rs
src-tauri/src/memory/: commands.rs  db.rs  embedding.rs  mod.rs  vector.rs
src-tauri/src/memory/db/: embeddings.rs  helpers.rs  init.rs  mod.rs  nodes.rs  search.rs  types.rs
src-tauri/src/projects/: commands.rs  db.rs
src-tauri/src/research/: commands.rs  db.rs
src-tauri/src/shared/: db_utils.rs  lm_studio_setup.rs  mod.rs
src-tauri/src/web_search/: commands.rs  fetch_cache.rs  fetch_commands.rs  fetch_documents.rs  fetch_html.rs  fetch_qwen.rs  fetch_security.rs  fetch_types.rs  fetch_utils.rs  fetch_wayback.rs  fetch_youtube.rs  mod.rs
(+634 files in other folders)
