[package]
name = "app"
version = "0.2.0"
description = "Local-first AI desktop workspace (Tauri + React)"
authors = ["Vortextbloons"]
license = "MIT"
repository = "https://github.com/Vortextbloons/veyra"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
chrono = "0.4"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["time", "net", "sync", "fs"] }
getrandom = "0.3"
urlencoding = "2"
base64 = "0.22"
readability = "0.3"
sha2 = "0.10"
scraper = "0.20"
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.37"
calamine = "0.26"
rayon = "1.10"
htmd = "0.2"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
ammonia = "3"
